--- a/templates/about.page.tmpl
+++ b/templates/about.page.tmpl
@@ -6,7 +6,7 @@
     <title>About Page</title>
 </head>
 <body>
-    <h1>About Us</h1>
-    <p>Welcome to the about page!</p>
+    <h1>This page created with GO</h1>
+    <p>Welcome to the About page!</p>
 </body>
 </html>
