--- a/templates/home.page.tmpl
+++ b/templates/home.page.tmpl
@@ -4,9 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Page</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
 </head>
 <body>
-    <h1>About Us</h1>
+<div class="container" >
+<div class="row" >
+
+  <div class="col" >
+
+   <h1>About Us</h1>
     <p>Welcome to the about page!</p>
+
+  </div>
+
+</div>
+ </div>
 </body>
 </html>
