both home page and about page now has proper bootstrap

--- a/templates/home.page.tmpl
+++ b/templates/home.page.tmpl
@@ -8,16 +8,12 @@
 </head>
 <body>
 <div class="container" >
-<div class="row" >
-
-  <div class="col" >
-
-   <h1>About Us</h1>
-    <p>Welcome to the about page!</p>
-
+  <div class="row" >
+    <div class="col" >
+      <h1>Home</h1>
+      <p>Welcome to the Home page!</p>
+    </div>
   </div>
-
-</div>
  </div>
 </body>
 </html>
