--- a/templates/about.page.tmpl
+++ b/templates/about.page.tmpl
@@ -1,19 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Page</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
-</head>
-<body>
-   <div class="container" >
+{{template "base" .}}
+
+{{define "content"}}
+
+<div class="container" >
   <div class="row" >
     <div class="col" >
-      <h1>About Us</h1>
-      <p>Welcome to the about page!</p>
+
+      <p>Welcome to the About page!</p>
     </div>
   </div>
  </div>
-</body>
-</html>
+
+{{end}}
